--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: python
+python:
+  - "3.7"
 script:
 - "./generate-tables.sh"
 deploy:
@@ -11,4 +13,4 @@ deploy:
 notifications:
   email:
     on_success: change
-on_failure: always
+    on_failure: always
