--- a/.github/workflows/publish-clartable.yml
+++ b/.github/workflows/publish-clartable.yml
@@ -19,11 +19,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           sudo apt-get update -y
-          pip install -r ./requirements.txt
+          pip install .
       - name: Generate tables
         run: |
           mkdir tables || true
-          ./generate-tables.sh
+          python -m rfhg -o ./tables/
           echo "Tables generated"
       - name: Deploy tables to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4 # https://github.com/JamesIves/github-pages-deploy-action
