--- a/.github/workflows/publish-clartable.yml
+++ b/.github/workflows/publish-clartable.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Deploy tables to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4 # https://github.com/JamesIves/github-pages-deploy-action
         with:
-          folder: tables
+          folder: .
