--- a/.github/workflows/publish-clartable.yml
+++ b/.github/workflows/publish-clartable.yml
@@ -28,6 +28,8 @@ jobs:
           cd ..
           echo "Tables generated"
           ls
+          cd ./tables
+          ls
       - name: Deploy tables to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4 # https://github.com/JamesIves/github-pages-deploy-action
         with:
